# FlowGenius

./: .coverage  .gitignore  BRAINLIFT.md  FIX_SUMMARY.md  PRD.md  README.md  flake.nix  mcp-taskmaster-wrapper.sh  pylock.toml  pyproject.toml  requirements.txt  test_integration.py
.cursor/rules/: nix-integration.mdc  project-rules.mdc  version-management.mdc
.taskmaster/: state.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json
docs/: agents_usage.md  offline_storage_guide.md  security_review_local_storage.md
nix/: README.md  example-config.nix  hm.nix  uv.nix
src/flowgenius/: __init__.py  utils.py
src/flowgenius/agents/: README.md  __init__.py  agent_utils.py  base_agent.py  content_generator.py  conversation_manager.py  engage_task_generator.py  feedback_processor.py  project_content_orchestrator.py  resource_curator.py  topic_scaffolder.py  unit_refinement_engine.py
src/flowgenius/cli/: __init__.py  main.py  new.py  unit.py  wizard.py
src/flowgenius/models/: __init__.py  config.py  config_manager.py  project.py  project_generator.py  refinement_persistence.py  renderer.py  settings.py  state_store.py
tests/: __init__.py  conftest.py  manual_test.py  manual_test_renderer.py  pyproject.toml  test_content_generator.py  test_conversation_manager.py  test_engage_task_generator.py  test_feedback_processor.py  test_integration.py  test_offline_functionality.py  test_progress_tracking_comprehensive.py  test_refinement_persistence.py  test_renderer.py  test_renderer_state_integration.py  test_resource_curator.py  test_unit_refinement_engine.py  test_utils.py
