[project]
name = "tests"
version = "0.5.15"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bbaserdem", email = "baserdemb@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
tests = "tests:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
